[gd_scene load_steps=19 format=3 uid="uid://du6rhal5mo868"]

[ext_resource type="Script" path="res://character/codigos/cyclope.gd" id="1_wp0xr"]
[ext_resource type="Texture2D" uid="uid://jf7mn6s8uh7w" path="res://character/ninja/NinjaGreen/Shadow.png" id="3_q45ac"]
[ext_resource type="Texture2D" uid="uid://db5f1csb5febi" path="res://character/Cyclope/SpriteSheet.png" id="3_x4y8m"]
[ext_resource type="AudioStream" uid="uid://csqtnpepyfj46" path="res://character/effects/HitCyclope.wav" id="4_qqd1y"]

[sub_resource type="Animation" id="Animation_6g0dm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.713726, 0.180392, 0, 0)]
}

[sub_resource type="Animation" id="Animation_y4xdg"]
resource_name = "idle"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 4]
}

[sub_resource type="Animation" id="Animation_l4g70"]
resource_name = "walk"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [8, 4]
}

[sub_resource type="Animation" id="Animation_x6v1f"]
resource_name = "walk_left"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [6, 10]
}

[sub_resource type="Animation" id="Animation_lh4g3"]
resource_name = "walk_rigth"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [7, 11]
}

[sub_resource type="Animation" id="Animation_yjksn"]
resource_name = "walk_up"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [9, 13]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_57467"]
_data = {
"RESET": SubResource("Animation_6g0dm"),
"idle": SubResource("Animation_y4xdg"),
"walk": SubResource("Animation_l4g70"),
"walk_left": SubResource("Animation_x6v1f"),
"walk_rigth": SubResource("Animation_lh4g3"),
"walk_up": SubResource("Animation_yjksn")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0cpmh"]
size = Vector2(18, 17)

[sub_resource type="CircleShape2D" id="CircleShape2D_l3nuk"]
radius = 115.017

[sub_resource type="Animation" id="Animation_w1nxm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.713726, 0.180392, 0, 0)]
}

[sub_resource type="Animation" id="Animation_ax0rg"]
resource_name = "hurt"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.713726, 0.180392, 0, 0.501961), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1abd4"]
_data = {
"RESET": SubResource("Animation_w1nxm"),
"hurt": SubResource("Animation_ax0rg")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ap71k"]
bg_color = Color(0.843413, 0.0917118, 3.85046e-07, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yiaiv"]
bg_color = Color(0.238915, 0.715983, 0, 1)

[node name="Cyclope" type="CharacterBody2D" node_paths=PackedStringArray("_texture", "_animation") groups=["enemy"]]
script = ExtResource("1_wp0xr")
_texture = NodePath("Sprite2D")
_animation = NodePath("AnimationPlayer")

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(1, 7)
scale = Vector2(1.16667, 1.14286)
texture = ExtResource("3_q45ac")

[node name="Sprite2D" type="Sprite2D" parent="."]
clip_children = 2
texture = ExtResource("3_x4y8m")
hframes = 4
vframes = 4

[node name="ColorRect" type="ColorRect" parent="Sprite2D"]
offset_left = -20.0
offset_top = -15.0
offset_right = 20.0
offset_bottom = 25.0
color = Color(0.713726, 0.180392, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_57467")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
show_behind_parent = true
position = Vector2(0, 2.5)
shape = SubResource("RectangleShape2D_0cpmh")

[node name="Detection" type="Area2D" parent="." groups=["enemy"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection"]
show_behind_parent = true
shape = SubResource("CircleShape2D_l3nuk")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="Effects" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1abd4")
}

[node name="hurtTimer" type="Timer" parent="."]
one_shot = true

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -9.0
offset_top = -10.0
offset_right = 9.0
offset_bottom = -8.0
theme_override_styles/background = SubResource("StyleBoxFlat_ap71k")
theme_override_styles/fill = SubResource("StyleBoxFlat_yiaiv")
max_value = 4.0
value = 4.0
show_percentage = false

[node name="hurt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_qqd1y")

[connection signal="body_entered" from="Detection" to="." method="_on_detection_body_entered"]
[connection signal="body_exited" from="Detection" to="." method="_on_detection_body_exited"]
